tests/miniJava/neg/005367_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { true int [] java ( ) { return 0 ; } }
